--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -32,6 +32,7 @@ en:
       back: 'Go back'
       name: 'Name'
       memory: 'Memory, Mb'
+      autoconf: 'Configure VM automatically for best performance'
     show:
       download: 'Download'
       edit: 'Edit'
