Add basic integration test

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -33,6 +33,7 @@ en:
       name: 'Name'
       memory: 'Memory, Mb'
       autoconf: 'Configure VM automatically for best performance'
+      add_database: 'Add database'
     show:
       download: 'Download'
       edit: 'Edit'
