Add SMB share type and make it default for Windows

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -39,6 +39,7 @@ en:
       share_type: Share type
       nfs: NFS
       virtualbox: VirtualBox
+      smb: SMB (Windows only)
       graphics_kit: Graphics kit
       qt_kit: QT kit
       curl: curl
