--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -61,8 +61,9 @@ en:
       database_name: Database name
       git_url: 'git repository URL'
       git_branch: 'git branch'
-      server_host: 'Server host'
-      server_port: 'Server port'
+      server_host: 'SSH host'
+      server_port: 'SSH port'
+      server_username: 'SSH username'
     show:
       download: 'Download'
       edit: 'Edit'
