postgresql 9.4, add puma, sidekiq.rb, apt upgrade, nodejs latest, remove ruby --binary, beginning of debian support

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -48,6 +48,7 @@ en:
       system_package: System package
       ruby_version: Ruby version
       nginx_unicorn: nginx + unicorn
+      nginx_puma: nginx + puma
       nginx_passenger: nginx + passenger
       mysql: MySQL
       postgresql: PostgreSQL
